--- a/src/app/components/scoreboard/scoreboard.component.scss
+++ b/src/app/components/scoreboard/scoreboard.component.scss
@@ -1,34 +1,22 @@
 .center {
     position: fixed;
-    top: 15%;
+    top: 10%;
     left: 50%;
-    transform: translate(-50%,-50%);
-}
-
-.teamOne {
-    position: fixed;
-    top: 20%;
-    left: 25%;
-    transform: translate(-50%, 0%);
-}
-
-.teamTwo {
-    position: fixed;
-    top: 20%;
-    left: 75%;
     transform: translate(-50%, 0%);
 }
 
 .teamOneWords {
     position: fixed;
-    top: 20%;
+    top: 30%;
     left: 20%;
+    width: 35%;
     transform: translate(-50%, 0%);
 }
 
 .teamTwoWords {
     position: fixed;
-    top: 20%;
-    left: 65%;
+    top: 30%;
+    left: 80%;
+    width: 35%;
     transform: translate(-50%, 0%);
 }
