--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <mat-card-content>
         <mat-form-field appearance="fill">
             <mat-label>Username</mat-label>
-            <input matInput type="text" [formControl]="username" placeholder="Ishkabibble">
+            <input matInput type="text" [formControl]="username" placeholder="Jill" autocomplete="chrome-off">
         </mat-form-field>
     </mat-card-content>
     <mat-card-actions align="center">
@@ -14,11 +14,11 @@
     <mat-card-content>
         <mat-form-field appearance="fill">
             <mat-label>Username</mat-label>
-            <input matInput type="text" [formControl]="username" placeholder="Ishkabibble">
+            <input matInput type="text" [formControl]="username" placeholder="John" autocomplete="chrome-off">
         </mat-form-field>
         <mat-form-field appearance="fill">
             <mat-label>SessionId</mat-label>
-            <input matInput type="text" [formControl]="sessionId" placeholder="awe9f098awf">
+            <input matInput type="text" [formControl]="sessionId" placeholder="ikl" autocomplete="chrome-off">
         </mat-form-field>
     </mat-card-content>
     <mat-card-actions align="center">
