--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -51,7 +51,7 @@
     <mat-card-content>
         <mat-form-field appearance="fill" style="width: 100%">
             <mat-label>Word</mat-label>
-            <input matInput type="text" [formControl]="word" placeholder="Pikachu">
+            <input matInput type="text" [formControl]="word" placeholder="Pikachu" autocomplete="chrome-off">
         </mat-form-field>
     </mat-card-content>
     <mat-card-actions align="center">
